<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/very_light_blue"
    android:orientation="vertical">

    <!--<TextView android:text="@string/coming_soon"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:textSize="42dip"-->
        <!--android:gravity="center"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="70dip"
        android:textSize="50sp"
        android:textColor="@color/black"
        />


    <LinearLayout
        android:id="@+id/view_aupic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginStart="@dimen/size_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/view_aupic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_aupic"
                android:layout_gravity="center"
                android:textSize="@dimen/size_24"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_5"
                android:layout_marginStart="@dimen/size_5"
                android:textColor="@color/dark_green"/>


            </LinearLayout>

        <LinearLayout
            android:id="@+id/create_aupic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/create_aupic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_aupic"
                android:layout_gravity="center"
                android:textSize="@dimen/size_24"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_5"
                android:layout_marginStart="@dimen/size_5"
                android:textColor="@color/dark_green"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginLeft="@dimen/size_45"
            android:layout_marginStart="@dimen/size_45"
            >

            <LinearLayout
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_5"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:layout_gravity="center"
                    android:textSize="@dimen/size_18"
                    android:textStyle="italic"
                    android:layout_marginLeft="@dimen/size_5"
                    android:layout_marginStart="@dimen/size_5"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gallery_aupic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_5"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:layout_gravity="center"
                    android:textSize="@dimen/size_18"
                    android:textStyle="italic"
                    android:layout_marginLeft="@dimen/size_5"
                    android:layout_marginStart="@dimen/size_5"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
